Added tests to validate groups data constraints

--- a/spec/fixtures/groups.yml
+++ b/spec/fixtures/groups.yml
@@ -1,7 +1,9 @@
 one:
   name: group
-  description: desc
+  description: descr
+  user_id: 2
 
 two:
   name: group2
-  description: desc2
+  description: descr2
+  user_id: 2
