--- a/spec/fixtures/core_users.yml
+++ b/spec/fixtures/core_users.yml
@@ -7,3 +7,13 @@ two:
   id: 2
   name: Homer Simpson
   subtype: false
+
+three:
+  id: 3
+  name: Max Hoffman
+  subtype: false
+
+four:
+  id: 4
+  name: Robert Lis
+  subtype: false
