Added validations to message and tests cases covering it

--- a/spec/fixtures/groups.yml
+++ b/spec/fixtures/groups.yml
@@ -1,9 +1,18 @@
 one:
+  id: 1
   name: group
   description: descr
   user_id: 2
 
 two:
+  id: 2
   name: group2
   description: descr2
   user_id: 2
+
+three:
+  id: 3
+  name: group3
+  description: descr2
+  user_id: 2
+
