--- a/spec/fixtures/locations.yml
+++ b/spec/fixtures/locations.yml
@@ -1,3 +1,11 @@
 one:
+  id: 1
   latitude: 53.344103999999990000
   longitude: -6.267493699999932000
+
+two:
+  id: 2
+  latitude: 53.344103999999990000
+  longitude: -6.267493699999932000
+  locationable_id: 1
+  locationable_type: Place
