--- a/spec/fixtures/places.yml
+++ b/spec/fixtures/places.yml
@@ -4,3 +4,10 @@ one:
   description: desc1
   city: Dublin
   country: Ireland
+
+two:
+  id: 2
+  name: place2
+  description: desc2
+  city: Dublin
+  country: Ireland
