- Added OAuth authentication flows via doorkeeper. - Added assertion flow for facebook authentication. - Added .rvmrc file - Added some model tests for identity association

--- a/spec/fixtures/core_users.yml
+++ b/spec/fixtures/core_users.yml
@@ -1,9 +1,14 @@
 one:
   id: 1
   name: Tobias Funke
-  subtype: false
+  subtype: User
 
 two:
   id: 2
   name: Homer Simpson
-  subtype: false
+  subtype: User
+
+business:
+  id: 3
+  name: Robert Lis
+  subtype: BusinessUser
