--- a/spec/fixtures/core_users.yml
+++ b/spec/fixtures/core_users.yml
@@ -1,19 +1,24 @@
 one:
   id: 1
   name: Tobias Funke
-  subtype: false
+  subtype: User
 
 two:
   id: 2
   name: Homer Simpson
-  subtype: false
+  subtype: User
 
 three:
   id: 3
   name: Max Hoffman
-  subtype: false
+  subtype: User
 
 four:
   id: 4
   name: Robert Lis
-  subtype: false
+  subtype: User
+
+five:
+  id: 5
+  name: Alchemy
+  subtype: BusinessUser
