Added validation to location model and a callback method to retrieve city and country from geocoder. Test cases added and removed city and country from place model

--- a/spec/fixtures/identities.yml
+++ b/spec/fixtures/identities.yml
@@ -9,3 +9,9 @@ two:
   token: 1234567890
   identifiable_id: 5
   identifiable_type: CoreUser
+
+three:
+  provider_id: 3
+  token: 1234567890
+  identifiable_id: 2
+  identifiable_type: CoreUser
