Added visibility type to place and event. We can't use 'type' as that multiple table inherit gem complains that it uses it.

--- a/spec/fixtures/events.yml
+++ b/spec/fixtures/events.yml
@@ -5,6 +5,8 @@ one:
   start_time: <%= Time.now + 10 %>
   end_time: <%= Time.now + 60 %>
   place_id: 1
+  visibility_type: private
+
 
 two:
   id: 2
@@ -13,3 +15,5 @@ two:
   start_time: <%= Time.now + 10 %>
   end_time: <%= Time.now + 60 %>
   place_id: 2
+  visibility_type: private
+
