--- a/spec/fixtures/places.yml
+++ b/spec/fixtures/places.yml
@@ -2,8 +2,10 @@ one:
   id: 1
   name: place1
   description: desc1
+  visibility_type: private
 
 two:
   id: 2
   name: place2
   description: desc2
+  visibility_type: public
