--- a/spec/fixtures/locations.yml
+++ b/spec/fixtures/locations.yml
@@ -11,3 +11,10 @@ two:
   longitude: -6.267493699999932000
   locationable_id: 1
   locationable_type: Place
+
+three:
+  id: 3
+  latitude: 53.344103999999990000
+  longitude: -6.267493699999932000
+  locationable_id: 1
+  locationable_type: LocationPost
