--- a/spec/fixtures/locations.yml
+++ b/spec/fixtures/locations.yml
@@ -31,3 +31,8 @@ four:
   country: Ireland
   locationable_id: 1
   locationable_type: User
+
+without_city_and_country:
+  id: 5
+  latitude: 53.344103999999990000
+  longitude: -6.267493699999932000
